[gd_scene load_steps=17 format=3 uid="uid://dq66112hawpx3"]

[ext_resource type="Script" uid="uid://c1d2552pvod1n" path="res://moth_enemy/moth_enemy.gd" id="1_rmvo2"]
[ext_resource type="Script" uid="uid://ckj3rd7w7dcrk" path="res://moth_enemy/moth_state_machine.gd" id="2_dutgy"]
[ext_resource type="Texture2D" uid="uid://dpttjs67giuy4" path="res://moth_enemy/Enraged Moth/front.png" id="2_mm7q4"]
[ext_resource type="Script" uid="uid://blrwfyvlqd3ca" path="res://moth_enemy/moth_direction.gd" id="2_nqo6d"]
[ext_resource type="Script" uid="uid://cnhkr454kbmr8" path="res://moth_enemy/moth_chase.gd" id="3_6eo5i"]
[ext_resource type="Script" uid="uid://mfgq6vs627nn" path="res://moth_enemy/moth_idle.gd" id="3_gtdvq"]
[ext_resource type="Texture2D" uid="uid://bk272l1x6t0qd" path="res://moth_enemy/Enraged Moth/Back.png" id="3_nqo6d"]
[ext_resource type="Script" uid="uid://cwojt73q7pthm" path="res://moth_enemy/moth_follow_light.gd" id="5_l03gm"]
[ext_resource type="PackedScene" uid="uid://dlwbgy88dpm5i" path="res://moth_enemy/cone.tscn" id="6_bk6gy"]
[ext_resource type="Script" uid="uid://cvgbkqcxgfl30" path="res://moth_enemy/moth_stalk.gd" id="6_vdxdw"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_y0wrk"]

[sub_resource type="BoxMesh" id="BoxMesh_l03gm"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rmvo2"]
radius = 0.12402344

[sub_resource type="SphereShape3D" id="SphereShape3D_bk6gy"]
radius = 0.515692

[sub_resource type="ConvexPolygonShape3D" id="ConvexPolygonShape3D_lih0l"]
points = PackedVector3Array(-0.00019574165, 1, -0.00019574165, 0.19498825, -1, -0.9808144, -0.00019574165, -1, -1, -0.19518405, -1, -0.9808144, -0.382733, -1, -0.92404073, -0.5555991, -1, -0.83163667, -0.7071261, -1, -0.7071261, -0.83163667, -1, -0.5555991, -0.92404073, -1, -0.382733, -0.9808144, -1, -0.19518405, -1, -1, -0.00019574165, -0.9808144, -1, 0.19498825, -0.92404073, -1, 0.38253725, -0.83163667, -1, 0.55540323, -0.7071261, -1, 0.7069303, -0.5555991, -1, 0.8314409, -0.382733, -1, 0.92384493, -0.19518405, -1, 0.9806186, -0.00019574165, -1, 1, 0.19498825, -1, 0.9806186, 0.38253725, -1, 0.92384493, 0.55540323, -1, 0.8314409, 0.7069303, -1, 0.7069303, 0.8314409, -1, 0.55540323, 0.92384493, -1, 0.38253725, 0.9806186, -1, 0.19498825, 1, -1, -0.00019574165, 0.9806186, -1, -0.19518405, 0.92384493, -1, -0.382733, 0.8314409, -1, -0.5555991, 0.7069303, -1, -0.7071261, 0.55540323, -1, -0.83163667, 0.38253725, -1, -0.92404073)

[sub_resource type="SphereShape3D" id="SphereShape3D_vdxdw"]
radius = 0.788198

[node name="MothEnemy" type="CharacterBody3D" node_paths=PackedStringArray("nav_agent") groups=["Enemies"]]
script = ExtResource("1_rmvo2")
nav_agent = NodePath("NavigationAgent3D")

[node name="Node" type="Node3D" parent="."]
script = ExtResource("2_nqo6d")

[node name="MothFront" type="Sprite3D" parent="Node"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
billboard = 1
shaded = true
texture = ExtResource("2_mm7q4")

[node name="MothBack" type="Sprite3D" parent="Node"]
transform = Transform3D(0.2, 0, 0, 0, 0.2, 0, 0, 0, 0.2, 0, 0, 0)
visible = false
billboard = 1
shaded = true
texture = ExtResource("3_nqo6d")

[node name="FrontNode" type="Node3D" parent="Node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.1)

[node name="BackNode" type="Node3D" parent="Node"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.1)

[node name="State Machine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("2_dutgy")
initial_state = NodePath("MothIdle")

[node name="MothIdle" type="Node" parent="State Machine" node_paths=PackedStringArray("moth_enemy")]
script = ExtResource("3_gtdvq")
moth_enemy = NodePath("../..")
metadata/_custom_type_script = "uid://mfgq6vs627nn"

[node name="MothChase" type="Node" parent="State Machine" node_paths=PackedStringArray("moth_enemy", "LightSensitive", "PlayerSensitive")]
script = ExtResource("3_6eo5i")
moth_enemy = NodePath("../..")
LightSensitive = NodePath("../../LightSensitive")
PlayerSensitive = NodePath("../../VisionArea")
metadata/_custom_type_script = "uid://mfgq6vs627nn"

[node name="MothFollow" type="Node" parent="State Machine" node_paths=PackedStringArray("moth_enemy")]
script = ExtResource("5_l03gm")
moth_enemy = NodePath("../..")
metadata/_custom_type_script = "uid://cwojt73q7pthm"

[node name="MothStalk" type="Node" parent="State Machine" node_paths=PackedStringArray("moth_enemy", "LightSensitive", "PlayerSensitive")]
script = ExtResource("6_vdxdw")
moth_enemy = NodePath("../..")
LightSensitive = NodePath("../../LightSensitive")
PlayerSensitive = NodePath("../../VisionArea")

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
visible = false
mesh = SubResource("CapsuleMesh_y0wrk")

[node name="MeshInstance3D" type="MeshInstance3D" parent="MeshInstance3D"]
transform = Transform3D(-1.7484554e-08, 0, 1, 0, 0.30000004, 0, -0.39999998, 0, -4.371139e-08, 0.008850992, 0, -0.3118363)
mesh = SubResource("BoxMesh_l03gm")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_rmvo2")

[node name="NavigationAgent3D" type="NavigationAgent3D" parent="."]

[node name="HoldPlayerCamera" type="Area3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)

[node name="MothSurroundingVision" type="CollisionShape3D" parent="HoldPlayerCamera"]
shape = SubResource("SphereShape3D_bk6gy")

[node name="VisionArea" type="Area3D" parent="."]

[node name="Cone" parent="VisionArea" instance=ExtResource("6_bk6gy")]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, -1, 0, 1, -4.371139e-08, 0, 0, -1.3987606)
visible = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="VisionArea"]
transform = Transform3D(3, 0, 0, 0, -1.3113416e-07, -3, 0, 3, -1.3113416e-07, 0, 0, -3.449238)
shape = SubResource("ConvexPolygonShape3D_lih0l")

[node name="MothSurroundingVision" type="CollisionShape3D" parent="VisionArea"]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)
shape = SubResource("SphereShape3D_bk6gy")

[node name="LightSensitive" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D2" type="CollisionShape3D" parent="LightSensitive"]
transform = Transform3D(10, 0, 0, 0, 10, 0, 0, 0, 10, 0, 0, 0)
shape = SubResource("SphereShape3D_bk6gy")

[node name="VisibleOnScreenNotifier3D" type="VisibleOnScreenNotifier3D" parent="."]
transform = Transform3D(5, 0, 0, 0, 5, 0, 0, 0, 5, 0, 0, 0)

[node name="StalkTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="KillRange" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="KillRange"]
shape = SubResource("SphereShape3D_vdxdw")

[node name="PlayerCameraAnchor" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 6.108588, 0, 0)

[connection signal="switch_to_chase" from="State Machine/MothStalk" to="." method="_on_moth_stalk_switch_to_chase"]
[connection signal="body_entered" from="VisionArea" to="." method="_on_vision_area_body_entered"]
[connection signal="body_entered" from="LightSensitive" to="." method="_on_light_sensitive_body_entered"]
[connection signal="screen_entered" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier3D" to="." method="_on_visible_on_screen_notifier_3d_screen_exited"]
[connection signal="timeout" from="StalkTimer" to="." method="_on_stalk_timer_timeout"]
[connection signal="body_entered" from="KillRange" to="." method="_on_kill_range_body_entered"]
